--- a/style.css
+++ b/style.css
@@ -1,15 +1,79 @@
+:root{
+    --output-length: 5vh;
+}
+
+
 .moduleRow{
     display: flex;
 }
 
 .module{
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    font-size: 1.5em;
+
     width: 10vh;
     height: 10vh;
     border: 1px solid black;
     background-color: #eee;
+    position: relative;
 }
 
 #PLA{
     display: flex;
     flex-direction: column;
+}
+
+.horizontalOutput{
+    position: absolute;
+    top: 47.5%;
+    left: 75%;
+
+    margin: 0;
+
+    z-index: 100;
+
+    width: var(--output-length);
+    height: 5%;
+
+
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.horizontalOutputOn{
+    color: green;
+    background-color: green;
+
+}
+
+.horizontalOutputOff{
+    color: red;
+    background-color: red;
+
+}
+
+.outputHidden{
+    display: none;
+}
+
+.verticalOutput {
+    position: absolute;
+
+    top: 60%;
+
+    z-index: 5;
+
+    height: var(--output-length);
+}
+
+
+.verticalOutputOn{
+    border-left: 6px solid green;
+}
+
+.verticalOutputOff{
+
+    border-left: 6px solid red;
 }
