--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root{
     --output-length: 5vh;
+    color:white;
+    background-color:#2E2E2E;
 }
 
 
@@ -16,9 +18,10 @@
     width: 10vh;
     height: 10vh;
     border: 1px solid black;
-    background-color: #eee;
+    background-color:#191919;
     position: relative;
 }
+
 
 #PLA{
     display: flex;
@@ -43,8 +46,8 @@
 }
 
 .horizontalOutputOn{
-    color: green;
-    background-color: green;
+    color: #06ff06;
+    background-color: #06ff06;
 
 }
 
@@ -70,7 +73,7 @@
 
 
 .verticalOutputOn{
-    border-left: 6px solid green;
+    border-left: 6px solid #06ff06;
 }
 
 .verticalOutputOff{
@@ -78,10 +81,22 @@
     border-left: 6px solid red;
 }
 
-#PLA{
-}
-
+/*General Layout*/
 
 #header{
+    height: 7vh;
+    display: flex;
+    padding-top: 2vh;
+    background-color:#191919;
+    align-items: start;
+    justify-content: center;
 
+}
+#PLA-container{
+    display :grid;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+
+    margin-top: 2.5vh;
 }
